--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <!-- Site Metas -->
   <meta name="keywords" content="" />
   <meta name="description" content="" />
-  <meta name="author" content="" />
+  <meta name="author" content="Laurent Delhorme" />
 
   <title>INODINO</title>
 
@@ -38,7 +38,7 @@
           <a class="navbar-brand" href="index.html">
             <img src="images/logo.png" alt="" />
             <span>
-              INODINO
+              Laurent Delhorme
             </span>
           </a>
 
@@ -81,8 +81,8 @@
                 <div class="carousel-item active">
                   <div class="detail-box">
                     <h1>
-                      interior <br />
-                      design
+                      Laurent <br />
+                      Delhorme
                     </h1>
                     <p>
                       There are many variations of passages of Lorem Ipsum
