--- a/index.html
+++ b/index.html
@@ -99,8 +99,8 @@
                 <div class="carousel-item">
                   <div class="detail-box">
                     <h1>
-                      interior <br />
-                      design
+                      mon site <br />
+                      perso
                     </h1>
                     <p>
                       There are many variations of passages of Lorem Ipsum
@@ -117,8 +117,8 @@
                 <div class="carousel-item">
                   <div class="detail-box">
                     <h1>
-                      interior <br />
-                      design
+                      mon site <br />
+                      perso
                     </h1>
                     <p>
                       There are many variations of passages of Lorem Ipsum
