--- a/index.html
+++ b/index.html
@@ -53,9 +53,9 @@
             <div id="myNav" class="overlay">
               <div class="overlay-content">
                 <a href="index.html">HOME</a>
-                <a href="about.html">ABOUT</a>
+                <a href="about.html">A propos</a>
                 <a href="service.html">Services</a>
-                <a href="contact.html">CONTACT US</a>
+                <a href="contact.html">Contact</a>
               </div>
             </div>
           </div>
@@ -91,7 +91,7 @@
                     </p>
                     <div>
                       <a href="">
-                        Contact us
+                        Contact
                       </a>
                     </div>
                   </div>
