--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
           <h6>01</h6>
         </div>
         <div class="num-box">
-          <h6>01</h6>
+          <h6>03</h6>
         </div>
       </div>
       <div class="container">
@@ -109,7 +109,7 @@
                     </p>
                     <div>
                       <a href="">
-                        Contact us
+                        Contact
                       </a>
                     </div>
                   </div>
@@ -117,17 +117,14 @@
                 <div class="carousel-item">
                   <div class="detail-box">
                     <h1>
-                      mon site <br />
-                      perso
+                      mon atelier <br />
                     </h1>
                     <p>
-                      There are many variations of passages of Lorem Ipsum
-                      available, but the majority have suffered alteration in some
-                      form, by
+                      Présentation de mon Workshop
                     </p>
                     <div>
                       <a href="">
-                        Contact us
+                        Mon atelier
                       </a>
                     </div>
                   </div>
