--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
                       form, by
                     </p>
                     <div>
-                      <a href="">
+                      <a href="contact.html">
                         Contact
                       </a>
                     </div>
@@ -108,7 +108,7 @@
                       form, by
                     </p>
                     <div>
-                      <a href="">
+                      <a href="contact.html">
                         Contact
                       </a>
                     </div>
@@ -123,7 +123,7 @@
                       Présentation de mon Workshop
                     </p>
                     <div>
-                      <a href="">
+                      <a href="workshop.html">
                         Mon atelier
                       </a>
                     </div>
