--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
                     </p>
                     <div>
                       <a href="contact.html">
-                        Contact
+                        Contactez moi ...
                       </a>
                     </div>
                   </div>
