--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
             <div id="myNav" class="overlay">
               <div class="overlay-content">
                 <a href="index.html">HOME</a>
-                <a href="about.html">A propos</a>
+                <a href="A propos.html">A propos</a>
                 <a href="service.html">Services</a>
                 <a href="contact.html">Contact</a>
               </div>
@@ -235,20 +235,20 @@
   </section>
   <!-- end service section -->
 
-  <!-- about section -->
-  <section class="about_section layout_padding">
+  <!-- A propos section -->
+  <section class="A propos_section layout_padding">
     <div class="container">
       <div class="row">
         <div class="col-md-6">
           <div class="img-box">
-            <img src="images/about-img.png" alt="">
+            <img src="images/A propos-img.png" alt="">
           </div>
         </div>
         <div class="col-md-6">
           <div class="detail-box">
             <div>
               <h2>
-                About Us
+                A propos Us
               </h2>
               <p>
                 There are many variations of passages of Lorem Ipsum available, but the majority have suffered
@@ -268,7 +268,7 @@
     </div>
   </section>
 
-  <!-- end about section -->
+  <!-- end A propos section -->
 
   <!-- concept section -->
   <section class="concept_section layout_padding">
@@ -644,7 +644,7 @@
           <ul>
             <li>
               <a href="">
-                About Us
+                A propos Us
               </a>
             </li>
             <li>
