--- a/contact.html
+++ b/contact.html
@@ -12,7 +12,7 @@
   <meta name="description" content="" />
   <meta name="author" content="" />
 
-  <title>INODINO</title>
+  <title>Laurent Delhorme</title>
 
   <!-- slider stylesheet -->
   <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/assets/owl.carousel.min.css" />
@@ -38,7 +38,7 @@
           <a class="navbar-brand" href="index.html">
             <img src="images/logo.png" alt="" />
             <span>
-              INODINO
+              Laurent Delhorme
             </span>
           </a>
 
@@ -53,9 +53,9 @@
             <div id="myNav" class="overlay">
               <div class="overlay-content">
                 <a href="index.html">HOME</a>
-                <a href="about.html">ABOUT</a>
+                <a href="A propos.html">A propos</a>
                 <a href="service.html">Services</a>
-                <a href="contact.html">CONTACT US</a>
+                <a href="contact.html">Contact</a>
               </div>
             </div>
           </div>
@@ -70,7 +70,7 @@
   <section class="contact_section layout_padding">
     <div class="container">
       <h2 class=" text-uppercase mb-4">
-        Contact Us
+        Contactez moi
       </h2>
       <div class="row">
         <div class="col-md-6 ">
@@ -92,7 +92,7 @@
                 </div>
                 <div class="mt-5">
                   <button type="submit">
-                    Send
+                    Envoyez
                   </button>
                 </div>
               </div>
@@ -195,7 +195,7 @@
           <ul>
             <li>
               <a href="">
-                About Us
+                A propos Us
               </a>
             </li>
             <li>
