--- a/index.html
+++ b/index.html
@@ -519,7 +519,7 @@
   <section class="contact_section layout_padding">
     <div class="container">
       <h2 class=" text-uppercase mb-4">
-        Contact Us
+        Contactez moi
       </h2>
       <div class="row">
         <div class="col-md-6 ">
