--- a/A propos.html
+++ b/A propos.html
@@ -55,7 +55,7 @@
                 <a href="index.html">HOME</a>
                 <a href="A propos.html">A propos</a>
                 <a href="service.html">Services</a>
-                <a href="contact.html">CONTACT US</a>
+                <a href="contact.html">Contactez moi</a>
               </div>
             </div>
           </div>
@@ -72,14 +72,14 @@
       <div class="row">
         <div class="col-md-6">
           <div class="img-box">
-            <img src="images/A propos-img.png" alt="">
+            <img src="images/about-img.png" alt="">
           </div>
         </div>
         <div class="col-md-6">
           <div class="detail-box">
             <div>
               <h2>
-                A propos Us
+                A propos de moi
               </h2>
               <p>
                 There are many variations of passages of Lorem Ipsum available, but the majority have suffered
