--- a/workshop.html
+++ b/workshop.html
@@ -55,7 +55,7 @@
                 <a href="index.html">HOME</a>
                 <a href="A propos.html">A propos</a>
                 <a href="service.html">Services</a>
-                <a href="contact.html">CONTACT US</a>
+                <a href="contact.html">Contactez moi</a>
               </div>
             </div>
           </div>
