--- a/workshop.html
+++ b/workshop.html
@@ -72,14 +72,14 @@
       <div class="row">
         <div class="col-md-6">
           <div class="img-box">
-            <img src="images/A propos-img.png" alt="">
+            <img src="images/about-img.png" alt="">
           </div>
         </div>
         <div class="col-md-6">
           <div class="detail-box">
             <div>
               <h2>
-                A propos Us
+                Mon atelier (Workshop)
               </h2>
               <p>
                 There are many variations of passages of Lorem Ipsum available, but the majority have suffered
