--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 			<div class="wrap-login100">
 				<form class="login100-form validate-form p-l-55 p-r-55 p-t-178">
 					<span class="login100-form-title">
-						Sign In
+						Bienvenue chez Toto
 					</span>
 
 					<div class="wrap-input100 validate-input m-b-16" data-validate="Please enter username">
@@ -47,27 +47,27 @@
 
 					<div class="text-right p-t-13 p-b-23">
 						<span class="txt1">
-							Forgot
+							Vous avez oublié 
 						</span>
 
 						<a href="#" class="txt2">
-							Username / Password?
+							Nom d'utilisateur / Mot de passe?
 						</a>
 					</div>
 
 					<div class="container-login100-form-btn">
 						<button class="login100-form-btn">
-							Sign in
+							Se connecter
 						</button>
 					</div>
 
 					<div class="flex-col-c p-t-170 p-b-40">
 						<span class="txt1 p-b-9">
-							Don’t have an account?
+							Vous n'avez pas de compte ?
 						</span>
 
 						<a href="#" class="txt3">
-							Sign up now
+							S'inscrire maintenant
 						</a>
 					</div>
 				</form>
