--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
 						</span>
 
 						<a href="#" class="txt2">
-							Nom d'utilisateur / Mot de passe ?
+							votre Nom d'utilisateur ou votre Mot de passe ?
 						</a>
 					</div>
 
