--- a/index.html
+++ b/index.html
@@ -47,11 +47,11 @@
 
 					<div class="text-right p-t-13 p-b-23">
 						<span class="txt1">
-							Vous avez oublié 
+							Vous avez oublié vos
 						</span>
 
 						<a href="#" class="txt2">
-							votre Nom d'utilisateur ou votre Mot de passe ?
+							Nom d'utilisateur / Mot de passe ?
 						</a>
 					</div>
 
