--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 			<div class="wrap-login100">
 				<form class="login100-form validate-form p-l-55 p-r-55 p-t-178">
 					<span class="login100-form-title">
-						Horizal - Garde corps pour Villa
+						Horizal - Garde corps
 					</span>
 
 					<div class="wrap-input100 validate-input m-b-16" data-validate="Please enter username">
